add parameterized test, models

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>playwright</artifactId>
             <version>1.53.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.10.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
